k8s/challenges-push-notifications.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenges-push-notifications
  labels:
    app: challenges-push-notifications
spec:
  selector:
    matchLabels:
      app: challenges-push-notifications
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: challenges-push-notifications
    spec:
      containers:
        - name: challenges-push-notifications
          image: registry.devbox/learnalist:latest
          args:
            [
              "--config=/etc/learnalist/config.yaml",
              "tools",
              "challenges",
              "push-notifications",
            ]
          volumeMounts:
            - name: config-volume
              mountPath: /etc/learnalist/config.yaml
              subPath: config.yaml
              readOnly: true
            - name: secrets-fcm-credentials-volume
              mountPath: /srv/learnalist/config/fcm-credentials.json
              subPath: fcm-credentials.json
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: learnalist-config
        - name: secrets-fcm-credentials-volume
          secret:
            secretName: learnalist-fcm
