k8s/challenges-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: challenges-sync
  labels:
    app: challenges-sync
spec:
  selector:
    matchLabels:
      app: challenges-sync
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: challenges-sync
    spec:
      containers:
        - name: challenges-sync
          image: registry.devbox/learnalist:latest
          args:
            [
              "--config=/etc/learnalist/config.yaml",
              "tools",
              "challenges",
              "sync",
            ]
          volumeMounts:
            - name: config-volume
              mountPath: /etc/learnalist/config.yaml
              subPath: config.yaml
              readOnly: true

      volumes:
        - name: config-volume
          configMap:
            name: learnalist-config
