k8s/event-reader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-reader
  labels:
    app: event-reader
spec:
  selector:
    matchLabels:
      app: event-reader
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: event-reader
    spec:
      containers:
        - name: event-reader
          image: registry.devbox/learnalist:latest
          args:
            ["--config=/etc/learnalist/config.yaml", "tools", "event-reader"]
          volumeMounts:
            - name: config-volume
              mountPath: /etc/learnalist/config.yaml
              subPath: config.yaml
              readOnly: true

      volumes:
        - name: config-volume
          configMap:
            name: learnalist-config
