k8s/remind-daily.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remind-daily
  labels:
    app: remind-daily
spec:
  selector:
    matchLabels:
      app: remind-daily
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: remind-daily
    spec:
      containers:
        - name: remind-daily
          image: registry.devbox/learnalist:latest
          args:
            ["--config=/etc/learnalist/config.yaml", "tools", "remind", "daily"]
          volumeMounts:
            - name: config-volume
              mountPath: /etc/learnalist/config.yaml
              subPath: config.yaml
              readOnly: true
            - name: db-schema-volume
              mountPath: "/srv/db-schema/"
            - name: srv-remind-daily-volume
              mountPath: "/srv/remind-daily/"
      volumes:
        - name: config-volume
          configMap:
            name: learnalist-config
        - name: db-schema-volume
          configMap:
            name: learnalist-db
        - name: srv-remind-daily-volume
          persistentVolumeClaim:
            claimName: remind-daily-01-pvc
