k8s/remind-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remind-manager
  labels:
    app: remind-manager
spec:
  selector:
    matchLabels:
      app: remind-manager
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: remind-manager
    spec:
      containers:
        - name: remind-manager
          image: registry.devbox/learnalist:latest
          args:
            [
              "--config=/etc/learnalist/config.yaml",
              "tools",
              "remind",
              "manager",
            ]
          volumeMounts:
            - name: config-volume
              mountPath: /etc/learnalist/config.yaml
              subPath: config.yaml
              readOnly: true
            - name: db-schema-volume
              mountPath: "/srv/db-schema/"
            - name: srv-remind-manager-volume
              mountPath: "/srv/remind-manager/"
      volumes:
        - name: config-volume
          configMap:
            name: learnalist-config
        - name: db-schema-volume
          configMap:
            name: learnalist-db
        - name: srv-remind-manager-volume
          persistentVolumeClaim:
            claimName: remind-manager-01-pvc
