k8s/slack-events.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-events
  labels:
    app: slack-events
spec:
  selector:
    matchLabels:
      app: slack-events
  template:
    metadata:
      labels:
        app: slack-events
    spec:
      containers:
        - name: slack-events
          image: registry.devbox/learnalist:latest
          args:
            ["--config=/etc/learnalist/config.yaml", "tools", "slack-events"]
          volumeMounts:
            - name: config-volume
              mountPath: /etc/learnalist/config.yaml
              subPath: config.yaml
              readOnly: true

      volumes:
        - name: config-volume
          configMap:
            name: learnalist-config
